# se-toolkit-lab-8

./: .env.docker.example  REPORT.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  observability.py  server.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
